# dotfiles

./: .bash_aliases  .bashrc  .gitconfig  .gitignore  .gitmodules  .mostrc  .p10k.zsh  .tmux.conf  .vimrc  .xsession  .zshrc  Notepad++ NppExec.txt  README.md  emplace_dotfiles.sh  install_programs.sh  rifle.conf
.config/: KDE Plasma Shortcuts.kksrc  compton.conf  konsolerc  mostrc  plasma-org.kde.plasma.desktop-appletsrc  starship.toml
.config/PCSX2/gamesettings/: SLUS-20995_7F74D8D0.ini
.config/PCSX2/inis/: PCSX2.ini
.config/PCSX2/inputprofiles/: King of Fighters 2002.ini
.config/REAPER/: reaper.ini
.config/REAPER/MouseMaps/: Drums.ReaperMouseMap
.config/VSCodium/User/: keybindings.json  settings.json
.config/X11/: xresources
.config/aichat/: config.yaml
.config/alacritty/: alacritty.toml  alacritty.yml
.config/awesome/: rc.lua
.config/beets/: config.yaml
.config/cava/: config
.config/cppman/: cppman.cfg
.config/doom/: config.el  custom.el  init.el
.config/dunst/: dunstrc
.config/dwl/: config.h  init.sh  programs.bash  programs.sh
.config/emacs/: init.el
.config/fcitx5/: profile
.config/fontconfig/: fonts.conf
.config/git/: config
.config/git/hooks/: prepare-commit-msg
.config/helix/: config.toml
.config/home-manager/: .nixd.json  flake.nix  home.nix  nvim.nix
.config/home-manager/nix/: README.md  ai.nix  archive.nix  cli.nix  dconf.nix  development.nix  dwl.nix  font.nix  game.nix  gnome.nix  gui.nix  i18n.nix  mail.nix  multimedia.nix  neomutt.nix  nvim.nix  other.nix  pass.nix  synology.nix  vscodium.nix  wayland.nix
.config/home-manager/nixos/: 8bitdo.nix  ai.nix  audio.nix  block-youtube.nix  dwl.nix  fonts.nix  game.nix  general.nix  gnome.nix  hyprland.nix  nas.nix  ntfs.nix  pass.nix  printer.nix  shell.nix  synology.nix  virtualization.nix  wine.nix
.config/home-manager/system/: README.md  ai.nix  audio.nix  beets-xtractor.nix  fonts.nix  general.nix  gpu.nix  helix.nix  hyprland.nix  i18n.nix  ntfs.nix  nvim.nix  pager.nix  shell.nix  virtualization.nix  wine.nix  yazi.nix
.config/hypr/: hypridle.conf  hyprland.conf  hyprland.lua  hyprlock.conf
.config/hypr/scripts/: language-switcher.mjs  restore_fullscreen  restore_fullscreen.rs  restore_fullscreen.sh  set-background.mjs
.config/joshuto/: joshuto.toml  keymap.toml  mimetype.toml  preview_file.sh  theme.toml
.config/latexmk/: latexmkrc
.config/lf/: lfrc
.config/lynx/: lynx.cfg
.config/mc/: ini
.config/mcomix/: keybindings.conf  preferences.conf
.config/mpd/: mpd.conf
.config/mpv/: input.conf  mpv.conf
.config/mpv/base/: mpv.conf
.config/ncmpcpp/: bindings  config
.config/newsboat/: config  urls
.config/nushell/: config.nu  env.nu  packages.nuon
.config/nushell/modules/: git-completions.nu  pass-completions.nu  ranger.nu
.config/nvim/: .stylua.toml  init.lua  init.vim  lazy-lock.json
.config/nvim/lua/: Key.lua  Path.lua  String.lua  Table.lua  auto-commands.lua  config.lua  console.lua  key_bindings.lua  mappings.lua  runner.lua  tables.lua  template-loader.lua  tests.lua
.config/nvim/lua/plugins/: autopairs.lua  bufferline.lua  cmp.lua  colorizer.lua  comment.lua  doge.lua  feline.lua  gitsigns.lua  glsl.lua  incline.lua  indent-blankline.lua  lspconfig.lua  luasnip.lua  mason.lua  mini-indentscope.lua  neogen.lua  neogit.lua  notify.lua  nu.lua  null-ls.lua  nvim-dap.lua  nvim-window.lua  session-manager.lua  symbols-outline.lua  telescope.lua  template-loader.lua  tokyonight.lua  treesitter.lua
.config/nvim/lua/template-loader/: init.lua
.config/nvim/spell/: en.utf-8.add  en.utf-8.add.spl
.config/nvim/templates/: .eslintrc.yml  .prettierrc.yml  .stylua.toml  CMakeLists.txt  cmake_uninstall.cmake.in  code-review.md  contact.yaml  contact_schema.yaml  debug.md  git-push.md  issue-time-estimate.md  nix.c  nix.lua  nix.py  nix.rs  nix.sh  pyproject.toml  scratchpad_test.mjs  scratchpad_test.py  shell.nix  skeleton.awk  skeleton.bash  skeleton.c  skeleton.confluencewiki  skeleton.cpp  skeleton.dart  skeleton.el  skeleton.html  skeleton.java  skeleton.jsonnet  skeleton.nix  skeleton.pl  skeleton.sage  skeleton.vtt  toolchain.toml
.config/nvim/templates/hooks/: pre-commit
.config/nvim/templates/project.py/: .gitignore  Makefile
.config/nvim/templates/project.py/src/sample/: simple.py
.config/nvim/templates/project.py/tests/: test_simple.py
.config/nvimpager/: init.vim
.config/nyxt/: auto-config.3.lisp
.config/picom/: picom.conf
.config/python/: pythonrc
.config/qtile/: config.py
.config/ranger/: commands.py  rc.conf  rifle.conf  scope.sh  ueberzugpp.py
.config/rofi/: config.rasi
.config/rofi/themes/: catpuccin-machiato.rasi  dracula.rasi
.config/sc-im/: scimrc
.config/sxhkd/: sxhkdrc
.config/tmux/: tmux.conf
.config/vimb/: README.md  config
.config/w3m/: config  keymap
.config/waybar/: config  config.jsonc  style.css  waybar-dwl.sh
.config/waybar/dwl/: config.jsonc  style.css  waybar-dwl.sh
.config/waybar/modules/: hyprland.jsonc  idle_inhibitor.jsonc  menu.jsonc  power.jsonc  pulseaudio.jsonc
.config/waybar/modules/custom/: days-to-live.jsonc  hibernate.jsonc  launcher.jsonc  lock.jsonc  logout.jsonc  pad.jsonc  reboot.jsonc  shutdown.jsonc  suspend.jsonc  wallpaper.jsonc  wlogout.jsonc
.config/waybar/modules/group/: audio.jsonc  menu.jsonc  power.jsonc
.config/waybar/scripts/: days-to-live.mjs  switch-sink.mjs
.config/waybar/styles/: define-color.css  idle_inhibitor.css  menu.css  padding.css  power.css  tooltip.css  window_waybar.css
.config/wlogout/: layout  style.css
.config/wofi/: config  style.css
.config/wofi/themes/: catpuccin-machiato.css  dark-pink.css
.config/yazi/: init.lua  theme.toml
.config/zathura/: zathurarc
.config/zathura/base/: zathurarc
.config/zsh/: .zshrc
.local/share/konsole/: Main.profile
.vim/plugged/: Plugins.txt
.vim/spell/: Languages.txt
.w3m/: keymap
.w3m/cgi-bin/: zict-en.cgi  zict-hover-en.cgi
etc/: environment  hosts  pacman.conf
etc/X11/: xorg.conf.d
etc/X11/xorg.conf.d/: 30-touchpad.conf
(+9 files in other folders)
